<resources>
    <string name="app_name">Aio Browser</string>
    <string name="facebook_app_id"></string>
    <string name="your_web_client_id">802063703014-69pdjvdd1le3qhrrksagicrinek2uovj.apps.googleusercontent.com</string>
    <string name="app_start">Start</string>
    <string name="app_loading">Safe Loading In Progress...</string>
    <string name="app_welcome_to">Welcome To</string>
    <string name="app_aio">Aio</string>
    <string name="app_browser">Browser</string>
    <string name="app_private_policy">Privacy Policy</string>
    <string name="app_terms_of_service">Terms of Service</string>
    <string name="app_search_hint">Search Or Type URL</string>
    <string name="app_news">News</string>
    <string name="app_google">Google</string>
    <string name="app_bing">Bing</string>
    <string name="app_yahoo">Yahoo</string>
    <string name="app_perplexity">Perplexity</string>
    <string name="app_ytb">Youtube</string>
    <string name="app_fb">Facebook</string>
    <string name="app_instagram">Instagram</string>
    <string name="app_search">Search</string>
    <string name="app_view_more">View More</string>
    <string name="app_recent_search">Recent Searches</string>
    <string name="app_clear_all">Clear All</string>
    <string name="app_normal">Normal</string>
    <string name="app_private">Private</string>
    <string name="app_home">Home</string>
    <string name="app_private_search">Searching Privately</string>
    <string name="app_private_search2">When you use InPrivate tabs, your search data isn\'t saved on your device after you\'re done. Temporary data is also deleted from your device after InPrivate tabs are closed, or the app is restarted.</string>
    <string name="app_clear_data">Clear Data</string>
    <string name="app_more">More</string>
    <string name="app_set_as_default_browser">Set as Default Browser</string>
    <string name="app_new_tab">New Tab</string>
    <string name="app_history">History</string>
    <string name="app_about">About</string>
    <string name="app_default_browser_title">Make AioBrowser Your Default Browser</string>
    <string name="app_open_setting">Open Settings</string>
    <string name="app_click_on_default_browser">Click On Default Browser</string>
    <string name="app_select_browse">Select AioBrowser</string>
    <string name="app_select_default_browser">Set As Default Browser</string>
    <string name="app_set_search_engine">Set Search Engine</string>
    <string name="app_clear_data_content">Clear All Tabs And Data ?</string>
    <string name="app_clean">Clean</string>
    <string name="app_log">Log</string>
    <string name="app_temp">Temp</string>
    <string name="app_scanning">Scanning....</string>
    <string name="app_clean_junk_files">Junk Files</string>
    <string name="app_clean_apk">Obsolete APK Files</string>
    <string name="app_clean_ad">AD Files</string>
    <string name="app_clean_residual">Residual Files</string>
    <string name="app_clean_cache">Cache Files</string>
    <string name="app_selected">Selected</string>
    <string name="app_scan_complete">Select the folder you wanted to clean</string>
    <string name="app_allow_storage_access">Allow Storage Access</string>
    <string name="app_allow_storage_access_content">To use this feature, please go to your phone settings and enable storage permission </string>
    <string name="app_deny">Deny</string>
    <string name="app_allow">Allow</string>
    <string name="app_ram_used">RAM Used</string>
    <string name="app_process_app_title">Running Background Apps</string>
    <string name="app_finish">Finish</string>
    <string name="app_stop">Stop</string>
    <string name="app_process">Process</string>
    <string name="app_process_title">Stopped %s Apps Running In The Background</string>
    <string name="app_clean_title">Cleaned Up %s</string>
    <string name="app_process_content">View Apps Running In The Background！</string>
    <string name="app_clean_content">Scan And Clean The Junk On Your Phone</string>
    <string name="app_scan">Scan</string>
    <string name="app_clean_load_content">Cleaning Your Device, Please Hold On...</string>
    <string name="app_my_files">My Files</string>
    <string name="app_file_manager">File Manager</string>
    <string name="app_recent_file">Recent Files</string>
    <string name="app_enable_storage">Enable Storage Permissions</string>
    <string name="app_downloads">Downloads</string>
    <string name="app_large_file">Large Files</string>
    <string name="app_images">Images</string>
    <string name="app_videos">Videos</string>
    <string name="app_apks">APKS</string>
    <string name="app_music">Music</string>
    <string name="app_zip">ZIP</string>
    <string name="app_documents">Documents</string>
    <string name="app_files">Files</string>
    <string name="app_tabs">Tabs</string>
    <string name="app_me">Me</string>
    <string name="app_clean_tips">"Trash To Be Cleaned "</string>
    <string name="app_no_app">No App Found</string>
    <string name="app_recently">Recently</string>
    <string name="app_share_with">Share with</string>
    <string name="app_more_recent">+%s more</string>
    <string name="app_file_no_support">The file does not support the operation</string>
    <string name="app_file_can_not_open">file can not open\n</string>
    <string name="app_share">Share</string>
    <string name="app_delete">Delete</string>
    <string name="app_cache_permission_tips">Grant Permissions To Clean Up Trash.</string>
    <string name="app_clean_no_junk">Your phone has no junk.</string>
    <string name="app_allow_cache_access">Grant permission to find cache</string>
    <string name="app_allow_cache_access_content">Please grant permissions to discover more junk files.</string>
    <string name="app_later">Maybe Later</string>
    <string name="app_scan_process_tips">Scanning for running processes</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>
    <string name="app_delete_msg">Confirm permanent deletion</string>
    <string name="app_no_data">No data</string>
    <string name="app_download">Download</string>
    <string name="app_downloading">Downloading</string>
    <string name="app_loading_content">loading</string>
    <string name="app_download_error">Download failed</string>
    <string name="app_download_no_net">No network available at the moment</string>
    <string name="app_already_download">Already downloaded</string>
    <string name="app_progress">Progress</string>
    <string name="app_done">Done</string>
    <string name="app_no_record">No records</string>
    <string name="app_rename">Rename</string>
    <string name="app_file_info">File information</string>
    <string name="app_ok">Ok</string>
    <string name="app_download_prepare">In preparation</string>
    <string name="app_skip">Skip</string>
    <string name="app_guide_title0">Enter the video URL</string>
    <string name="app_guide_title1">Select the downloaded video</string>
    <string name="app_guide_title2">Play video content</string>
    <string name="app_guide_title3">Disclaimer</string>
    <string name="app_guide_content">Please note that when using this service to download and upload videos, users must obtain authorization from the original source. Unauthorized operations may involve legal liability. Please consciously abide by relevant laws and regulations when using this service.</string>
    <string name="app_try">Try</string>
    <string name="app_disclaimer">Disclaimer</string>
    <string name="app_disclaimer_content">Please note that when using this service to download and upload videos, users must obtain authorization from the original source. Unauthorized operations may involve legal liability. Please consciously abide by relevant laws and regulations when using this service.</string>
    <string name="app_enable_permission">Enable persmissions</string>
    <string name="app_record">Record</string>
    <string name="app_video_download_guide">Download the tutorial</string>
    <string name="download_finished">Download finished</string>
    <string name="download_failed">Download failed</string>
    <string name="app_file_name">Name:</string>
    <string name="app_file_size">File size:</string>
    <string name="app_file_time">File time:</string>
    <string name="app_tips">Tips</string>
    <string name="app_tips_content">Due to legal restrictions, videos cannot be downloaded.</string>
    <string name="app_vimeo">Vimeo</string>
    <string name="app_x">X</string>
    <string name="app_whats">Whatsapp</string>
    <string name="app_home_no_history">Enter a website URL to download videos.</string>
    <string name="app_view_the_guide">View the guide</string>
    <string name="app_method">Step</string>
    <string name="app_tt_tips_1">Open\" TikTok \" and click \"Share\"</string>
    <string name="app_common_tips1">Click \" AIO Browser \", start downloading</string>
    <string name="app_video_not_detected">Video Not Detected?</string>
    <string name="app_video_guide_content">1: Play video first.\n\n2: Refresh the page,and the button will be available.</string>
    <string name="app_video_failed_tips">Failed? Report this web page to us</string>
    <string name="app_feedback_title">Confirm To Send This Website Feedback To Us?</string>
    <string name="app_feedback_content">Once we receive the feedback, we will address it as soon as possible.</string>
    <string name="app_fast_performance">Fast Performance</string>
    <string name="app_security_features">Security Features</string>
    <string name="app_simple_and_easy">Simple and Easy</string>
    <string name="app_set_as_default">Set as Default</string>
    <string name="app_open">Open</string>
    <string name="app_copy_link_recognized">Copy Link Recognized</string>
    <string name="app_dead_linked">Dead Links</string>
    <string name="app_feedback">Feedback</string>
    <string name="app_search_guide">Paste share URL here</string>
    <string name="app_video_downlod">Video Downloader</string>
    <string name="app_confirm">Confirm</string>
    <string name="app_ins_tips_1">Open\" instagram \" and click \"Share\"</string>
    <string name="app_ins_tips_2">Open\" instagram \" and click \"copy link\"</string>
    <string name="app_search_video">Search Video</string>
    <string name="app_guide_title">Smooth Downloads,Instant Updates.</string>
    <string name="app_nf_pop_guide1">Your video has finished downloading!</string>
    <string name="app_nf_pop_guide2">New trending videos just updated—you\'re going to love them!</string>
    <string name="app_nf_pop_guide3">Turn on notifications</string>
    <string name="app_x_tips_1">Open\" X \" and click \"Share\"</string>
    <string name="app_x_tips_2">Open\" X \" and click copy link</string>
    <string name="app_rate_title">Five-Star Review</string>
    <string name="app_rate_title5">Rate the browser</string>
    <string name="app_rate_content">Your encouragement makes us better!</string>
    <string name="app_rate_content5">Your encouragement makes us better!</string>
    <string name="app_submit">Submit</string>
    <string name="app_all">All</string>
    <string name="app_task_add">Task Added</string>
    <string name="app_view">View</string>
    <string name="app_add_widget">Add Widget</string>
    <string name="app_add_widget_success">Widget added successfully</string>
    <string name="app_rate_feedback">Thanks for feedback</string>
    <string name="app_try_now">Try Now</string>
    <string name="app_download_tips1">Click the download button</string>
    <string name="app_download_tips2">Confirm Download</string>
    <string name="app_download_tips3">Can view download tasks</string>
    <string name="app_location_title">Are you currently in</string>
    <string name="app_sub_failed">Subscribe failed</string>
    <string name="app_sub_failed_tips">Oops！subscribe tale took a turn！</string>
    <string name="app_retry">Retry</string>
</resources>