<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginHorizontal="27dp"
    android:paddingHorizontal="13dp"
    android:layout_gravity="center"
    android:background="@drawable/shape_bg_e6fff_13r">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="67dp"
        android:layout_height="67dp"
        app:srcCompat="@mipmap/ic_pop_no_ads"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"
        ></androidx.appcompat.widget.AppCompatImageView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        style="@style/app_text_bold"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_sub_failed"
        ></androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        style="@style/app_text_bold"
        android:textColor="#80000000"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_sub_failed_tips"
        ></androidx.appcompat.widget.AppCompatTextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="#FFE6E5E6"
        ></View>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFeedBack"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/shape_sub_feedback"
            android:layout_marginEnd="7dp"
            android:text="@string/app_feedback"
            android:gravity="center"
            android:textColor="#4D000000"
            style="@style/app_text_bold"
            >
        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRetry"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/shape_commit"
            android:layout_marginStart="7dp"
            android:text="@string/app_retry"
            android:gravity="center"
            android:textColor="@color/white"
            style="@style/app_text_bold"
            >
        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>