<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlTabRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:background="@drawable/shape_10r_white">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_disclaimer"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        ></androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="46dp"
        android:layout_height="46dp"
        app:srcCompat="@mipmap/ic_pop_close"
        android:layout_alignParentEnd="true"
        android:padding="13dp"
        android:layout_marginTop="2dp"
        ></androidx.appcompat.widget.AppCompatImageView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="13dp"
        android:layout_marginTop="49dp"
        android:text="@string/app_disclaimer_content"
        android:textSize="11sp"
        android:gravity="center"
        android:textColor="#80000000"
        ></androidx.appcompat.widget.AppCompatTextView>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E6FFFFFF"
        android:layout_below="@+id/tvContent"
        android:layout_marginTop="34dp"
        ></View>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCommit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/shape_commit"
        android:layout_below="@+id/line"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:layout_marginHorizontal="14dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:text="@string/app_enable_permission"
        ></androidx.appcompat.widget.AppCompatButton>
</RelativeLayout>