<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/shape_13r_white"
    android:layout_marginHorizontal="27dp"
    android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_feedback_title"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginHorizontal="27dp"
        android:textColor="@color/black"
        android:layout_marginTop="13dp"
        ></androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_feedback_content"
        android:layout_marginHorizontal="27dp"
        android:textColor="#80000000"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="11sp"
        ></androidx.appcompat.widget.AppCompatTextView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFEFEFEF"
        android:layout_marginTop="12dp"
        ></View>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="13dp"
        android:background="@drawable/shape_commit"
        android:textColor="@color/white"
        android:layout_marginTop="13dp"
        android:text="@string/app_ok"
        ></androidx.appcompat.widget.AppCompatButton>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_cancel"
        android:layout_gravity="center_horizontal"
        android:padding="9dp"
        android:textSize="11sp"
        style="@style/app_text_bold"
        android:textColor="#4D000000"
        android:layout_marginBottom="14dp"
        ></androidx.appcompat.widget.AppCompatTextView>
</androidx.appcompat.widget.LinearLayoutCompat>