<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="27dp"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:background="@drawable/shape_bg_rate">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivRate"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginTop="17dp"
        app:srcCompat="@mipmap/ic_rate_default"
        ></androidx.appcompat.widget.AppCompatImageView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:text="@string/app_rate_title"
        android:layout_marginTop="21dp"
        style="@style/app_text_bold"
        android:textSize="15sp"
        android:textColor="@color/black"
        ></androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRateContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:text="@string/app_rate_content"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:textColor="#80000000"
        ></androidx.appcompat.widget.AppCompatTextView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="21dp"
        android:layout_marginHorizontal="30dp"
        ></androidx.recyclerview.widget.RecyclerView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFE5E3E5"
        ></View>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/commit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/shape_commit_unable"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="14dp"
        android:text="@string/app_submit"
        android:layout_marginBottom="17dp"
        android:textSize="15sp"
        android:textColor="#FFFFFFFF"
        android:textAllCaps="false"
        ></androidx.appcompat.widget.AppCompatButton>
</androidx.appcompat.widget.LinearLayoutCompat>