<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/bg_start">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="45dp"
        android:paddingHorizontal="13dp"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@mipmap/ic_back"
            android:layout_centerVertical="true"
            ></androidx.appcompat.widget.AppCompatImageView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_about"
            android:layout_centerInParent="true"
            style="@style/app_text_bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            ></androidx.appcompat.widget.AppCompatTextView>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:src="@mipmap/ic_start_logo"
        >

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="V 1.0.0"
        android:textColor="#80000000"
        style="@style/app_text_bold"
        android:textSize="15sp"
        android:layout_below="@+id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        ></androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_below="@+id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_aio"
            android:textColor="#FF00CED6"
            style="@style/app_text_bold"
            android:textSize="24sp"
            ></androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_browser"
            android:layout_marginStart="4dp"
            android:textColor="#FF5755D9"
            style="@style/app_text_bold"
            android:textSize="24sp"
            ></androidx.appcompat.widget.AppCompatTextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:id="@+id/rlStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="66dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPrivate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/app_private_policy"
                android:textSize="15sp"
                android:textColor="#FF007AFF"
                style="@style/app_text_bold"
                ></androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="&amp;"
                android:textSize="15sp"
                android:textColor="#80000000"
                style="@style/app_text_bold"
                ></androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTermsService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_terms_of_service"
                android:textSize="15sp"
                android:textColor="#FF007AFF"
                style="@style/app_text_bold"
                ></androidx.appcompat.widget.AppCompatTextView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</RelativeLayout>