<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    >
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="13dp"
        app:srcCompat="@mipmap/ic_location"
        ></androidx.appcompat.widget.AppCompatImageView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginStart="82dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_location_title"
            android:textSize="14sp"
            android:textColor="@color/black"
            style="@style/app_text_bold"
            ></androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnYes"
                android:layout_width="103dp"
                android:layout_height="30dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/app_yes"
                android:textAllCaps="false"
                android:background="@drawable/shape_location_yes"
                ></androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNo"
                android:layout_width="103dp"
                android:layout_height="30dp"
                android:textColor="#5453A1"
                android:textSize="14sp"
                android:text="@string/app_no"
                android:textAllCaps="false"
                android:layout_marginStart="8dp"
                android:background="@drawable/shape_location_no"
                ></androidx.appcompat.widget.AppCompatButton>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="13dp"
        android:background="#F7F7F9"
        android:layout_alignParentBottom="true"
        ></View>
</RelativeLayout>